# Homomorphic-Encryption-Analysis

./: Cargo.toml  README.md
benches/: comparison_bench.rs  iot_energy_bench.rs  rsa_bench.rs  voting_bench.rs
results/: comparison_methods.csv  memory_overhead.csv
src/: classic_crypto.rs  iot_energy.rs  lib.rs  main.rs  paillier_pure.rs  rsa_oaep.rs  rsa_pure.rs  traits.rs  voting.rs
tests/: comparison_methods.rs  iot_energy_simulation.rs  memory_overhead.rs  voting_simulation.rs
