[package]
name = "homomorphic_encryption_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8.5"
rsa_ext = "0.1.2"
serde = "1.0.228"
sha2 = "0.10.9"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "rsa_bench"
harness = false
